<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.3</version>
		<relativePath/>
	</parent>
	<groupId>com</groupId>
	<artifactId>chefia</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>chefia</name>
	<description>Software para gestão de restaurantes</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-annotations</artifactId>
			<version>2.2.22</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-database-postgresql</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
			<version>10.15.2</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>com.auth0</groupId>
			<artifactId>java-jwt</artifactId>
			<version>4.2.1</version>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.8.9</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>io.swagger.codegen.v3</groupId>
				<artifactId>swagger-codegen-maven-plugin</artifactId>
				<version>3.0.57</version>
				<executions>
					<execution>
						<id>users</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>${project.basedir}/src/main/resources/static/api/users.yaml</inputSpec>
							<language>spring</language>
							<generateSupportingFiles>false</generateSupportingFiles>
							<apiPackage>com.chefia.users.api</apiPackage>
							<modelPackage>com.chefia.users.model</modelPackage>
							<modelNameSuffix>DTO</modelNameSuffix>
							<configOptions>
								<interfaceOnly>true</interfaceOnly>
								<jakarta>true</jakarta>
								<java8>true</java8>
							</configOptions>
						</configuration>
					</execution>
					<execution>
						<id>addresses</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>${project.basedir}/src/main/resources/static/api/addresses.yaml</inputSpec>
							<language>spring</language>
							<generateSupportingFiles>false</generateSupportingFiles>
							<apiPackage>com.chefia.addresses.api</apiPackage>
							<modelPackage>com.chefia.addresses.model</modelPackage>
							<modelNameSuffix>DTO</modelNameSuffix>
							<configOptions>
								<interfaceOnly>true</interfaceOnly>
								<jakarta>true</jakarta>
								<java8>true</java8>
							</configOptions>
						</configuration>
					</execution>
					<execution>
						<id>menuitems</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>${project.basedir}/src/main/resources/static/api/menuitems.yaml</inputSpec>
							<language>spring</language>
							<generateSupportingFiles>false</generateSupportingFiles>
							<apiPackage>com.chefia.menuitems.api</apiPackage>
							<modelPackage>com.chefia.menuitems.model</modelPackage>
							<modelNameSuffix>DTO</modelNameSuffix>
							<configOptions>
								<interfaceOnly>true</interfaceOnly>
								<jakarta>true</jakarta>
								<java8>true</java8>
							</configOptions>
						</configuration>
					</execution>
					<execution>
						<id>restaurants</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>${project.basedir}/src/main/resources/static/api/restaurants.yaml</inputSpec>
							<language>spring</language>
							<generateSupportingFiles>false</generateSupportingFiles>
							<apiPackage>com.chefia.restaurants.api</apiPackage>
							<modelPackage>com.chefia.restaurants.model</modelPackage>
							<modelNameSuffix>DTO</modelNameSuffix>
							<configOptions>
								<interfaceOnly>true</interfaceOnly>
								<jakarta>true</jakarta>
								<java8>true</java8>
							</configOptions>
						</configuration>
					</execution>
					<execution>
						<id>usertypes</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>${project.basedir}/src/main/resources/static/api/usertypes.yaml</inputSpec>
							<language>spring</language>
							<generateSupportingFiles>false</generateSupportingFiles>
							<apiPackage>com.chefia.usertypes.api</apiPackage>
							<modelPackage>com.chefia.usertypes.model</modelPackage>
							<modelNameSuffix>DTO</modelNameSuffix>
							<configOptions>
								<interfaceOnly>true</interfaceOnly>
								<jakarta>true</jakarta>
								<java8>true</java8>
							</configOptions>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
